# openspa

./: Navigation.py  README.md  RecordTimer.py  configure.ac  enigma2.bb  keyids.py  mytest.py  skin.py  timer.py
data/: Makefile.am  keymap.xml  menu.xml  setup.xml  skin_default.xml  skin_display_et10000.xml  skin_subtitles.xml  skin_text.xml  startwizard.xml
data/display/: Makefile.am
data/display/display220/: skin_display.xml
data/display/display400/: skin_display.xml
data/display400/: Makefile.am  skin_display.xml
data/display400/openSPA_modern/: skin_display.xml
data/display400/openSPA_simple/: Makefile.am  skin_default.xml
data/display400/skin_default/: skin_display.xml
data/displaytext/: skin_display.xml
data/fonts/: Makefile.am
data/gbipbox/: Makefile.am  startwizard.xml
data/rc_models/: Makefile.am
data/rc_models/azhd/: Makefile.am
data/rc_models/azme/: Makefile.am
data/rc_models/odinm7/: rcpositions.xml
data/rc_models/odinm9/: rcpositions.xml
data/rc_models/vu3/: Makefile.am
data/skin_default/: Makefile.am
data/skin_default/buttons/: Makefile.am
data/skin_default/icons/: Makefile.am
lib/actions/: action.cpp  action.h
lib/base/: console.cpp  e2avahi.h  ebase.cpp  eerror.cpp  encoding.cpp  estring.cpp  filepush.cpp  filepush.h  httpstream.cpp  message.h  smartptr.h  thread.cpp
lib/driver/: avswitch.cpp  rcinput.cpp
lib/dvb/: Makefile.inc  amldecoder.cpp  amldecoder.h  db.cpp  decoder.cpp  decoder.h  demux.cpp  demux.h  dvb.cpp  dvb.h  dvbtime.cpp  epgcache.cpp  epgcache.h  fastscan.cpp  fastscan.h  filepush.cpp  frontend.cpp  frontend.h  frontendparms.cpp  frontendparms.h  idvb.h  metaparser.cpp  pmt.cpp  pmtparse.h  pvrparse.cpp  scan.cpp  sec.cpp  sec.h  streamserver.cpp  teletext.cpp  tstools.cpp  volume.cpp
lib/dvb/lowlevel/: mhw.h
lib/dvb_ci/: dvbci.cpp  dvbci.h
lib/gdi/: fb.cpp  fb.h  fblcd.cpp  fblcd.h  font.cpp  gfbdc.cpp  glcddc.cpp  gpixmap.cpp  lcd.cpp  lcd.h  picload.cpp  picload.h
lib/gui/: elistboxcontent.cpp  esubtitle.cpp  ewindow.cpp  ewindow.h
lib/network/: serversocket.cpp  socket.cpp  socket.h
lib/python/: enigma_python.i
lib/python/Components/: AVSwitch.py  About.py  ChoiceList.py  ConfigList.py  EpgList.py  FileList.py  Harddisk.py  HdmiCec.py  HelpMenuList.py  Input.py  InputDevice.py  Ipkg.py  Language.py  Lcd.py  Makefile.am  MovieList.py  Network.py  NimManager.py  ParentalControl.py  PluginList.py  RcModel.py  RecordingConfig.py  ServiceList.py  ServiceScan.py  SystemInfo.py  TimerList.py  TimerSanityCheck.py  Timezones.py  TuneTest.py  UsageConfig.py  VolumeControl.py  Wol.py  config.py  opkg.py
lib/python/Components/Converter/: ClientsStreaming.py  ClockToText.py  EventName.py  FrontendInfo.py  Makefile.am  MovieInfo.py  PliExtraInfo.py  RemainingToText.py  ServiceInfo.py  ServiceName.py
lib/python/Components/Renderer/: LcdPicon.py  Makefile.am  Picon.py
lib/python/Plugins/: Plugin.py
lib/python/Plugins/Extensions/: Makefile.am
lib/python/Plugins/Extensions/CutListEditor/: ui.py
lib/python/Plugins/Extensions/GraphMultiEPG/: GraphMultiEpg.py  GraphMultiEpgSetup.py
lib/python/Plugins/Extensions/HbbTV/: Makefile.am  aitreader.py  plugin.py
lib/python/Plugins/Extensions/MediaPlayer/: plugin.py  settings.py
lib/python/Plugins/Extensions/MediaScanner/: plugin.py
lib/python/Plugins/Extensions/PicturePlayer/: ui.py
lib/python/Plugins/Extensions/StartXBMC/: plugin.py
lib/python/Plugins/SystemPlugins/: Makefile.am
lib/python/Plugins/SystemPlugins/3GModemManager/: apnlist.xml  plugin.py
lib/python/Plugins/SystemPlugins/3GModemManager/script/: Makefile.am
lib/python/Plugins/SystemPlugins/AnimationSetup/: plugin.py
lib/python/Plugins/SystemPlugins/CableScan/: plugin.py
lib/python/Plugins/SystemPlugins/CommonInterfaceAssignment/: plugin.py
lib/python/Plugins/SystemPlugins/DiseqcTester/: plugin.py
lib/python/Plugins/SystemPlugins/FastScan/: plugin.py
lib/python/Plugins/SystemPlugins/HdmiCEC/: plugin.py
lib/python/Plugins/SystemPlugins/Hotplug/: plugin.py
lib/python/Plugins/SystemPlugins/NetworkWizard/: NetworkWizard.py
lib/python/Plugins/SystemPlugins/OSD3DSetup/: plugin.py
lib/python/Plugins/SystemPlugins/PositionerSetup/: plugin.py
lib/python/Plugins/SystemPlugins/Satfinder/: plugin.py
lib/python/Plugins/SystemPlugins/SoftwareManager/: BackupRestore.py  Flash_online.py  ImageBackup.py  plugin.py
lib/python/Plugins/SystemPlugins/VideoEnhancement/: plugin.py
lib/python/Plugins/SystemPlugins/Videomode/: VideoHardware.py  videowizard.xml
lib/python/Plugins/SystemPlugins/WetekFRQ/: plugin.py
lib/python/Plugins/SystemPlugins/WirelessLan/: plugin.py
lib/python/Screens/: About.py  AudioSelection.py  AutoDiseqc.py  CCcamInfo.py  ChannelSelection.py  ChoiceBox.py  Ci.py  CronTimer.py  EpgSelection.py  EventView.py  HarddiskSetup.py  InfoBar.py  InfoBarGenerics.py  InputBox.py  InputDeviceSetup.py  InstallWizard.py  Ipkuninstall.py  LanguageSelection.py  LocationBox.py  Makefile.am  Menu.py  MessageBox.py  MovieSelection.py  MultiBootStartup.py  NetworkSetup.py  OScamInfo.py  ParentalControlSetup.py  PictureInPicture.py  PluginBrowser.py  RecordPaths.py  Satconfig.py  ScanSetup.py  ServiceInfo.py  ServiceScan.py  Setup.py  SleepTimerEdit.py  SoftwareUpdate.py  Standby.py  StartWizard.py  StreamingClientsInfo.py  (+9 more)
lib/python/Tools/: Directories.py  Downloader.py  HardwareInfo.py  NumericalTextInput.py  Profile.py  RedirectOutput.py  StbHardware.py
lib/service/: Makefile.inc  event.cpp  listboxservice.cpp  listboxservice.h  service.cpp  servicedvb.cpp  servicedvb.h  servicedvbrecord.cpp  servicedvbrecord.h  servicedvd.cpp  servicedvd.h  servicem2ts.cpp  servicemp3.cpp  servicemp3.h  servicemp3record.cpp
main/: Makefile.am  bsod.cpp  enigma.cpp
po/: Makefile.am  ca.po  en.po  es.po  fr.po
tools/: enigma2.sh.in
(+5 files in other folders)
